# networks-course

lab01/: lab01.md
lab02/: lab02.md
lab02/rest-service/: Cargo.toml  README.md
lab02/rest-service/src/: app.rs  config.rs  error.rs  main.rs  state.rs
lab02/rest-service/src/domain/: image.rs  mod.rs  product.rs  repositories.rs
lab02/rest-service/src/http/: routes.rs
lab02/rest-service/src/http/dto/: image.rs  mod.rs  products.rs
lab02/rest-service/src/http/handlers/: health.rs  image.rs  mod.rs  products.rs
lab02/rest-service/src/infra/: local_image_storage.rs  mod.rs  products_inmem.rs
lab02/rest-service/src/services/: product.rs
lab03/: README.md  lab03.md
lab03/multithread_server/: Cargo.toml
lab03/unithread_server/: Cargo.toml
lab04/: lab04.md
lab04/proxy_server/: Cargo.toml  README.md
lab05/: README.md  lab05.md
lab05/mail_client_libs/: Cargo.toml
lab05/remote_launch/: Cargo.toml
lab05/smtp_client/: Cargo.toml
lab06/: README.md  lab06.md
lab06/ftp_client/: Cargo.toml
lab07/: README.md  lab07.md
lab07/heartbeat/: Cargo.toml
lab07/simple_echo/: Cargo.toml
lab08/: README.md  lab08.md
lab08/stop_and_wait/: Cargo.toml  send_file.txt
lab08/stop_and_wait/src/: client.rs  lib.rs  server.rs
lab09/: README.md  lab09.md
lab09/copies/: Cargo.toml
lab09/free_ports/: Cargo.toml
lab09/ip_netmask/: Cargo.toml
lab10/: README.md  lab10.md
lab10/gbn/: Cargo.toml  input.txt
lab11/: README.md  lab11.md
lab11/echov6/: Cargo.toml
lab11/icmp_traceroute/: Cargo.toml
lab12/: README.md  lab12.md
lab12/rip/: Cargo.toml
(+25 files in other folders)
