[package]
name = "rust_template_web_server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json", "multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }

tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

thiserror = "2"
dotenvy = "0.15"
