[package]
name = "stop_and_wait"
version = "0.1.0"
edition = "2024"

[lib]
name = "stop_and_wait"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
rand = "0.8"
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "sync", "time"] }
